Solved a bug: use messageToCurve for `Y` derivation